<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_type_alarm_2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/bg_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/item_note"
            android:textSize="20dp"
            android:fontFamily="@font/rubik_medium"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent"/>

    <TextView
        android:id="@+id/time_alam_2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/txt_09_30"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_note"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:track="@drawable/switch_track" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/stroke_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_alam_2">

        <TextView
            android:id="@+id/tv_date_alarm_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/txt_date_time_alarm"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_set_time_repeating_2"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background= "@color/transparen"
            android:textSize="15sp"
            android:text="@string/txt_delete"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

