<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetAlarm"
    android:background="@color/black">

    <AnalogClock
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/txt_set_your_alarm"
        android:textColor="@color/twhit"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_rectengle"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/bg_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_content_repeating"
            android:layout_width="362dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="338dp"
            android:layout_margin="25dp"
            android:background="@color/white"
            android:padding="20dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_time_repeating"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/view_set_time_repeating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_repeating_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="Time"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.481" />

                    <Button
                        android:id="@+id/btn_set_time_repeating"
                        android:layout_width="95dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/txt_set_time"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_set_time_repeating_2"
                        android:layout_width="95dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/txt_set_time"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="11sp"
                        tools:layout_editor_absoluteX="216dp"
                        tools:layout_editor_absoluteY="2dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_note_repeating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/txt_note"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_time_repeating" />

            <EditText
                android:id="@+id/et_note_repeating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="#647AFF"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/txt_input_note"
                android:textColor="@color/twhit"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_note_repeating" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_set_repeating_alarm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@color/black"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/txt_add_set_alarm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_note_repeating" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/stroke_black"
                android:fontFamily="@font/rubik_medium"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_set_repeating_alarm" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_time_repeating_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="-5dp">

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>